[project]
name = "scheduler"
version = "0.1.0"
description = ""
authors = [{name = "Melvyn de Kort", email = "melvyn@mdekort.nl"}]
requires-python = ">=3.9"
dependencies = [
    "PyYAML>=6.0",
    "docker>=7.1",
    "requests>=2.32",
    "Flask>=3.1.3",
    "gunicorn>=23.0",
    "cachetools>=6.2.6",
    "APScheduler>=3.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0",
    "pylint>=3.3",
]

[tool.hatch.build.targets.wheel]
packages = ["scheduler"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pylint.main]
extension-pkg-allow-list = ["docker", "cachetools.func"]

[tool.pylint.messages_control]
disable = ["import-error"]
