[project]
name = "scheduler"
version = "0.1.0"
description = ""
authors = [{name = "Melvyn de Kort", email = "melvyn@mdekort.nl"}]
requires-python = ">=3.9"
dependencies = [
    "PyYAML>=6.0.3",
    "docker>=7.1",
    "requests>=2.34.2",
    "Flask>=3.1.3",
    "gunicorn>=23.0.0",
    "cachetools>=6.2.6",
    "APScheduler>=3.11.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pylint>=4.0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["scheduler"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pylint.main]
extension-pkg-allow-list = ["docker", "cachetools.func"]

[tool.pylint.messages_control]
disable = ["import-error"]
